# learn-python

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
bas_snip/: index.html
code-samples/: argparse_sample.py  class_boilerplate.py  file_system.py  intrapolate_date_data_multiindex.py  json_decimal_to_str.py  read_data_from_url.py  remove_json_attributes.py  xls_to_csv.py
code-samples/Config Files/: access_config_ini.py  access_inline_config.py  config.ini  inline_config.py
code-samples/Custom Logging/: log_helper.py  logging_test.py
code-samples/PackageBoilerplate/: sample.py
code-samples/PackageBoilerplate/MainPackage/: __init__.py  main_package_script.py
code-samples/PackageBoilerplate/MainPackage/SubPackage/: sub_package_script.py
db/: index.html
docs/: bas_snip.md  file.md  index.md  setup.md  use-mod.md  web_scr_snip.md  web_scrape.md
docs/stylesheets/: extra.css
file/: index.html
img/: index.html
img_snip/: index.html
jup/: index.html
jup_snip/: index.html
mail/: index.html
oop/: index.html
python/: Pandas.ipynb  grp_lst_of_dicts.py  parse_gsheets.py  parse_gsheets_simple.py  quickbase_samples.py  snappy_parquet_read.py
regex/: index.html
search/: search_index.json
setup/: index.html
use-mod/: index.html
web_scr_snip/: index.html
web_scrape/: index.html
