[project]
name = "learn-python"
version = "0.1.0"
description = "Documentation for learnign python"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bs4>=0.0.2",
    "ipykernel>=6.31.0",
    "lxml==5.3.1",
    "mkdocs>=1.6.1",
    "mkdocs-custommill>=1.3.0",
    "mkdocs-material>=9.7.1",
    "mkdocs-material-extensions>=1.3.1",
    "pip>=25.3",
    "python-markdown-math>=0.9",
    "requests>=2.32.5",
]
